--- a/package.json
+++ b/package.json
@@ -2,17 +2,14 @@
   "name": "manifest-bot",
   "version": "1.0.0",
   "description": "A WhatsApp-based daily manifestation bot using Baileys and Node.js",
-  "type": "module",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
-  "engines": {
-    "node": "16.x"
-  },
   "dependencies": {
+    "@whiskeysockets/baileys": "^6.17.16",
     "express": "^4.18.2",
-    "@adiwajshing/baileys": "^5.0.0",
-    "node-cron": "^3.0.2"
+    "node-cron": "^3.0.2",
+    "qrcode-terminal": "^0.12.0"
   }
 }
