--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@whiskeysockets/baileys": "^6.17.16",
     "express": "^4.18.2",
     "node-cron": "^3.0.2",
+    "qrcode": "^1.5.4",
     "qrcode-terminal": "^0.12.0"
   }
 }
